@@ -35,7 +35,6 @@
                 <string>cancel_action</string>
                 <string>delete</string>
                 <string>delete_action</string>
-                <string>edit</string>
                 <string>embed</string>
                 <string>publish</string>
                 <string>publish_action</string>
