@@ -26,7 +26,6 @@
             <value>
               <tuple>
                 <string>detect_uploaded_file</string>
-                <string>edit</string>
                 <string>upload_file</string>
               </tuple>
             </value>
