@@ -3,25 +3,26 @@ Document Ingestion Message | document_ingestion_workflow
 Document Ingestion Message | edit_workflow
 Drawing | document_interaction_workflow
 Drawing | document_publication_workflow
+Drawing | edit_workflow
 Drawing | local_permission_interaction_workflow
 Drawing | processing_status_workflow
-File | -edit_workflow
 File | document_interaction_workflow
 File | document_publication_workflow
 File | local_permission_interaction_workflow
 File | processing_status_workflow
-Image | -edit_workflow
 Image | document_interaction_workflow
 Image | document_publication_workflow
 Image | local_permission_interaction_workflow
 Image | processing_status_workflow
 PDF | document_interaction_workflow
 PDF | document_publication_workflow
+PDF | edit_workflow
 PDF | local_permission_interaction_workflow
 PDF | processing_status_workflow
 Person | local_permission_interaction_workflow
 Presentation | document_interaction_workflow
 Presentation | document_publication_workflow
+Presentation | edit_workflow
 Presentation | local_permission_interaction_workflow
 Presentation | processing_status_workflow
 RSS Feed | document_publication_workflow
@@ -29,10 +30,12 @@ RSS Feed | edit_workflow
 RSS Feed | local_permission_interaction_workflow
 Spreadsheet | document_interaction_workflow
 Spreadsheet | document_publication_workflow
+Spreadsheet | edit_workflow
 Spreadsheet | local_permission_interaction_workflow
 Spreadsheet | processing_status_workflow
 Text | document_interaction_workflow
 Text | document_publication_workflow
+Text | edit_workflow
 Text | local_permission_interaction_workflow
 Text | processing_status_workflow
 URL Crawler | document_publication_workflow
